--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,13 +11,13 @@
   </head>
   <body>
     <h1>Astro</h1>
-    <canvas class="zdog-canvas" width="400" height="300"></canvas>
+    <canvas class="zdog-canvas" width="600" height="500"></canvas>
     <button class="flip-whiteboard">Flip</button>
 
     <style>
       .zdog-canvas {
         /* background: #292b2b; */
-        background: #e9eff1;
+        background: linear-gradient(180deg, #f9fdff, #e2f8ff);
       }
     </style>
 
@@ -33,11 +33,12 @@
       const illo = new Zdog.Illustration({
         element: ".zdog-canvas",
         dragRotate: true,
-        rotate: { x: -Zdog.TAU / 16, y: Zdog.TAU / 10 },
+        rotate: { y: Zdog.TAU / 4 },
+        zoom: 2,
       });
 
       const groupWhiteboard = new Zdog.Group({
-        addTo: illo,
+        // addTo: illo,
       });
 
       const whiteboardTheWidth = 90;
@@ -49,8 +50,6 @@
         color: "#fff",
         fill: true,
       });
-
-      const markerThickness = 6;
 
       const border = new Zdog.Rect({
         width: whiteboardTheWidth,
@@ -90,8 +89,8 @@
       groupLeftStand.addChild(foot);
       groupRightStand.addChild(stand.copy());
       groupRightStand.addChild(foot.copy());
-      illo.addChild(groupRightStand);
-      illo.addChild(groupLeftStand);
+      // illo.addChild(groupRightStand);
+      // illo.addChild(groupLeftStand);
       groupWhiteboard.addChild(fill);
       groupWhiteboard.addChild(border);
 
@@ -114,7 +113,16 @@
       drawFace();
       illo.updateRenderGraph();
 
-      flipButton.addEventListener("click", function flipWhiteboard() {
+      function update() {
+        requestAnimationFrame(() => {
+          illo.updateRenderGraph();
+          update();
+        });
+      }
+
+      update();
+
+      function flipWhiteboard() {
         const springValue = new Spring({
           target: Zdog.TAU / 2,
           tension: 180,
@@ -134,7 +142,215 @@
         });
 
         springValue.start();
-      });
+      }
+      flipButton.addEventListener("click", flipWhiteboard);
+
+      // setInterval(() => {
+      //   flipWhiteboard();
+      // }, 2800);
+
+      (function face() {
+        const head = new Zdog.Rect({
+          addTo: illo,
+          stroke: 28,
+          color: "#F5EDDB",
+          width: 24,
+          height: 24,
+        });
+
+        const glasses = new Zdog.Group({
+          addTo: head,
+          translate: { y: 10, z: 14 },
+        });
+
+        const frame = new Zdog.Shape({
+          addTo: glasses,
+          color: "#473739",
+          stroke: 3,
+          path: [
+            // left lens
+            { x: -24, y: -11 },
+            {
+              arc: [
+                { x: -24, y: -18 },
+                { x: -12, y: -18 },
+              ],
+            },
+            {
+              arc: [
+                { x: -2, y: -18 },
+                { x: -2, y: -10 },
+              ],
+            },
+            {
+              arc: [
+                { x: -2, y: 0 },
+                { x: -12, y: 0 },
+              ],
+            },
+            {
+              arc: [
+                { x: -24, y: 0 },
+                { x: -24, y: -11 },
+              ],
+            },
+            // bridge
+            { move: { x: -2, y: -14 } },
+            { x: 2, y: -14 },
+            // right lens
+            { move: { x: 24, y: -11 } },
+            {
+              arc: [
+                { x: 24, y: -18 },
+                { x: 12, y: -18 },
+              ],
+            },
+            {
+              arc: [
+                { x: 2, y: -18 },
+                { x: 2, y: -10 },
+              ],
+            },
+            {
+              arc: [
+                { x: 2, y: 0 },
+                { x: 12, y: 0 },
+              ],
+            },
+            {
+              arc: [
+                { x: 24, y: 0 },
+                { x: 24, y: -11 },
+              ],
+            },
+          ],
+        });
+
+        const leftStem = new Zdog.Shape({
+          addTo: glasses,
+          color: "#473739",
+          stroke: 3,
+          closed: false,
+          visible: false,
+          translate: { x: -24, y: 24 },
+          path: [
+            { y: 0 },
+            { y: 0, z: -16 },
+            {
+              arc: [
+                { y: 0, z: -28 },
+                { y: 6, z: -28 },
+              ],
+            },
+          ],
+        });
+
+        const rightStem = leftStem.copy({
+          visible: true,
+          translate: { x: 24, y: -16 },
+        });
+
+        const leftEye = new Zdog.Ellipse({
+          addTo: head,
+          diameter: 10,
+          fill: true,
+          color: "#4D80B2",
+          translate: { x: -12, y: 0, z: 10 },
+        });
+
+        const leftPupil = new Zdog.Ellipse({
+          addTo: leftEye,
+          diameter: 6,
+          fill: true,
+          color: "#000",
+          translate: { z: 1 },
+        });
+
+        const rightEye = leftEye.copy({
+          translate: { x: 12, y: 0, z: 10 },
+        });
+
+        const rightPupil = leftPupil.copy({
+          addTo: rightEye,
+        });
+
+        const smile = new Zdog.Shape({
+          addTo: head,
+          translate: { y: 8, z: 10 },
+          path: [
+            { x: -4, y: 0 },
+            {
+              arc: [
+                { x: -4, y: 4 },
+                { x: 0, y: 4 },
+              ],
+            },
+            {
+              arc: [
+                { x: 4, y: 4 },
+                { x: 4, y: 0 },
+              ],
+            },
+          ],
+          closed: false,
+          stroke: 3,
+          color: "#000",
+        });
+
+        // const hair = new Zdog.RoundedRect({
+        //   addTo: head,
+        //   width: 36,
+        //   height: 24,
+        //   stroke: 12,
+        //   cornerRadius: 2,
+        //   fill: true,
+        //   color: "#473739",
+        //   translate: { y: -24 },
+        //   rotate: { x: Zdog.TAU / 4 },
+        // });
+        const hair = new Zdog.Shape({
+          addTo: head,
+          path: [
+            { x: 22, y: -6, z: 6 },
+            { x: -22, y: -6, z: 6 },
+            { x: -22, y: 0 },
+            { x: 22, y: 0 },
+          ],
+          stroke: 4,
+          color: "#674134",
+          fill: true,
+          translate: { y: -20, z: 10 },
+        });
+
+        const rightSideburn = new Zdog.Shape({
+          addTo: hair,
+          translate: { x: 22 },
+          path: [
+            { y: 0, z: 0 },
+            // { y: 8, z: -4 },
+            // { y: 8, z: -6 },
+            { y: 20, z: -8 },
+            {
+              arc: [
+                { y: 14, z: -8 },
+                { y: 14, z: -14 },
+              ],
+            },
+            {
+              arc: [
+                { y: 14, z: -20 },
+                { y: 20, z: -20 },
+              ],
+            },
+            { y: 28, z: -22 },
+            // Return to top of head
+            { y: 0, z: -22 },
+          ],
+          stroke: 4,
+          color: "#674134",
+          fill: true,
+        });
+      })();
     </script>
   </body>
 </html>
