--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,11 @@
 ---
+import "@fontsource/atkinson-hyperlegible/400.css";
+import "@fontsource/atkinson-hyperlegible/700.css";
+
+type Props = {
+  title?: string;
+};
+
 const { title = "Ben Holmes" } = Astro.props;
 ---
 
