fonts: tilt-neon

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,3 +20,10 @@ const { title = "Ben Holmes" } = Astro.props;
     <slot />
   </body>
 </html>
+
+<style is:global>
+  @font-face {
+    font-family: "Tilt Neon";
+    src: url("/fonts/Tilt_Neon/TiltNeon-Regular-VariableFont_XROT,YROT.ttf");
+  }
+</style>
